[model] model-element/model-element-camera.html is a failure https://bugs.webkit.org/show_bug.cgi?id=237894 rdar://88982597

Reviewed by Tim Horton.

Ensure we have a non-zero contentSize() and model data before attempting to
create a player. Otherwise, we could end up with a zero frame when calling
into ARKit and the model would fail to load and the ready promise would be
rejected, causing this test to fail.

We can change the existing call site to sizeMayHaveChanged() to no longer
check whether we are using a platform layer since sizeMayHaveChanged() now
takes care of checking whether it has a player.

* Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::createModelPlayer):
(WebCore::HTMLModelElement::sizeMayHaveChanged):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):
(WebCore::RenderLayerBacking::updateGeometry):



Canonical link: https://commits.webkit.org/248440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291301 268f45cc-cd09-0410-ab3c-d52691b4dbfc